# ldopa

./: .gitignore  CMakeLists.txt  LICENSE
docs/doxydoc/: Doxyfile.example
python/bpy/src/: main.cpp
python/bpy/src/pn/: eventlog_pn-bpw.cpp  evlog_ptnets_dotwritter-bpw.cpp  pn_regs_synth-bpw.cpp
python/bpy/src/ts/: eventlog_ts-bpw.cpp  evlog_ts_dotwritter-bpw.cpp  ts_reducer-bpw.cpp
python/demos/cexperiments/: cexperiments.pyproj
python/demos/cexperiments/src/: pnsynth_experimenter.py
python/demos/work_files/: log05-pn.gv
python/demos/work_files/cexp/: 2018-10-04-22-27-23.txt  2018-10-06-23-39-34.txt  2018-10-06-23-44-17.txt  2018-10-07-00-25-32.txt  2018-10-07-00-38-07.txt  2018-10-07-16-51-27.txt  2018-10-07-17-43-02.txt  2018-12-19-02-26-09.txt
python/demos/work_files/cexp/ser001/: 2018-09-15-19-21-49.txt  2018-09-15-19-31-18.txt  (+3 more)
python/demos/work_files/pnsynth/: log05-pn.gv
sol/vs12/projects/core/: core.vc120.vcxproj  core.vc120.vcxproj.filters  stdafx.cpp
sol/vs12/projects/eventlog/: eventlog.vc120.vcxproj  eventlog.vc120.vcxproj.filters
sol/vs12/projects/graphs/: graphs.vc120.vcxproj  graphs.vc120.vcxproj.filters
sol/vs12/projects/pn/: pn.vc120.vcxproj
sol/vs12/projects/ts/: stdafx.cpp  ts.vc120.vcxproj
sol/vs12/properties/import/: sqlite3_17-inc.vc120.props  sqlite3_17.vc120.props.example
tests/gtest/src/pn/: pn_test_settings.h.example
tests/gtest/src/strutils/: search_algos_test.cpp  set_str_pool_test.cpp
tests/gtest/work_files/ts/: MiscTsConverters1-selfLoopEliminate1-a.gv  MiscTsConverters1-selfLoopEliminate1-b.gv
(+30 files in other folders)
